--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                   <div class="content-right">
                     <div>
                       <p>Roast Curves</p>
-                      <img src="assets/chart.jpg" alt="">
+                      <img src="assets/chart-blue.jpg" alt="">
                     </div>
 
                     <div>
