--- a/index.html
+++ b/index.html
@@ -284,7 +284,10 @@
               <p>Roast Name</p>
               <p>(Select for More Info)</p>
             </div>
-            <!-- copy and paste 'dropdown' div for more -->
+
+		<!-- copy and paste 'dropdown' div for more -->
+	        <!-- ROAST A -->
+
             <div class="dropdown">
               <button class="clicker">
                 <div>
