--- a/index.html
+++ b/index.html
@@ -327,13 +327,8 @@
 
                   <div class="content-right">
                     <div>
-                      <p>Roast Curves</p>
+                      <p>Roast Curves &amp; Gas/Power Time</p>
                       <img src="assets/chart-blue.png" alt="">
-                    </div>
-
-                    <div>
-                      <p>Gas/Power Time</p>
-                      <img src="assets/gas.jpg" alt="">
                     </div>
                   </div>
                 </div>
