--- a/index.html
+++ b/index.html
@@ -301,11 +301,10 @@
               <div class="dropdown-content">
                 <div class="content-inner">
                   <div class="content-left">
-                    <p>Placeholder text are the third generation that has been growing coffee. Our grandfather, José Uribe, was the founder of
-                    the farm El Diviso. With the work of all the family and constant savings we were able to build the infrastructure to
-                    process differentiated coffees; searching for better quality, both in coffee and our lives. After a long trial and error
-                    period we managed to standardize different processes, getting a better income in order to plant new varieties that
-                    allowed us to have better quality.</p>
+                    <p>We blasted this 14 lb batch. We started with a high charge temp (490F on the bean probe) and then immediately hit the coffee with full gas. The gas pattern for this coffee was pretty traditional (stepping down on the gas quickly), but at just over 5 minutes, we felt excited to taste what an extremely fast roast would cup like on the Loring system. 
+                    </p>
+                    <p>In his experience, anytime Danny had ever roasted a coffee with such extreme gas on a drum roaster, he mentioned that he always found the cup character to be harsher with carbon tones. With such a fast roast, he was expecting this coffee to have a more carbon-like character with some underdevelopment. 
+		    </p>
 
                     <div>
                       <div class="list-item">
