--- a/index.html
+++ b/index.html
@@ -312,16 +312,28 @@
                         <p>3:53</p>
                       </div>
                       <div class="list-item">
-                        <p>Density</p>
+                        <p>Duration</p>
                         <p>xxx</p>
                       </div>
                       <div class="list-item">
-                        <p>Duration</p>
+                        <p>Dev. Time</p>
                         <p>5:35</p>
                       </div>
-                    </div>
+                      <div class="list-item">
+                        <p>Dev. Time Ration</p>
+                        <p>5:35</p>
+                      </div>
+                      <div class="list-item">
+                        <p>Start Temp</p>
+                        <p>5:35</p>
+                      </div>                    
+                      <div class="list-item">
+                        <p>End Temp</p>
+                        <p>5:35</p>
+                      </div>  
+		    </div>
 
-                    <p>Cupping Notes<br>Complex, juicy, peach, tropical passionfruit, quick finish, doesn’t cool great - 87</p>
+                    <p>Cupping Notes<br>On the table, the team found this coffee to be absent any &#8220;roasty&#8221; notes or harsher tones. Instead we experienced really delicate and clear tropical fruit notes. In 3-4 weeks, we predict that this roast may open up further to offer more intensity in the cup. </p>
                   </div>
 
                   <div class="content-right">
