--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
               <div class="dropdown-content">
                 <div class="content-inner">
                   <div class="content-left">
-                    <p>We blasted this 14 lb batch. We started with a high charge temp (490F on the bean probe) and then immediately hit the coffee with full gas. The gas pattern for this coffee was pretty traditional (stepping down on the gas quickly), but at just over 5 minutes, we felt excited to taste what an extremely fast roast would cup like on the Loring system. 
+                    <p>We blasted this 14lb batch. We started with a high charge temp (490&deg;F on the bean probe) and then immediately hit the coffee with full gas. The gas pattern for this coffee was pretty traditional (stepping down on the gas quickly), but at just over 5 minutes, we felt excited to taste how an extremely fast roast would cup on the Loring system. 
                     </p>
                     <p>In his experience, anytime Danny had ever roasted a coffee with such extreme gas on a drum roaster, he mentioned that he always found the cup character to be harsher with carbon tones. With such a fast roast, he was expecting this coffee to have a more carbon-like character with some underdevelopment. 
 		    </p>
@@ -338,7 +338,7 @@
 
                   <div class="content-right">
                     <div>
-                      <p>Roast Curves &amp; Gas/Power Time</p>
+                      <p>Roast Curves &amp; Gas/Power Time <br></p>
                       <img src="assets/chart-blue.png" alt="">
                     </div>
                   </div>
