--- a/index.html
+++ b/index.html
@@ -313,23 +313,23 @@
                       </div>
                       <div class="list-item">
                         <p>Duration</p>
-                        <p>xxx</p>
+                        <p>x:xx</p>
                       </div>
                       <div class="list-item">
                         <p>Dev. Time</p>
-                        <p>5:35</p>
+                        <p>x:xx</p>
                       </div>
                       <div class="list-item">
                         <p>Dev. Time Ration</p>
-                        <p>5:35</p>
+                        <p>x:xx</p>
                       </div>
                       <div class="list-item">
                         <p>Start Temp</p>
-                        <p>5:35</p>
+                        <p>xxx&deg;F</p>
                       </div>                    
                       <div class="list-item">
                         <p>End Temp</p>
-                        <p>5:35</p>
+                        <p>xxx&deg;F</p>
                       </div>  
 		    </div>
 
