--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                   <div class="content-right">
                     <div>
                       <p>Roast Curves &amp; Gas/Power Time <br></p>
-                      <img src="assets/chart-blue.png" alt="">
+                      <img src="assets/fast-hot.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -387,15 +387,10 @@
                     <p>Cupping Notes<br>Complex, juicy, peach, tropical passionfruit, quick finish, doesn’t cool great - 87</p>
                   </div>
             
-                  <div class="content-right">
+                 <div class="content-right">
                     <div>
-                      <p>Roast Curves</p>
-                      <img src="assets/chart.jpg" alt="">
-                    </div>
-            
-                    <div>
-                      <p>Gas/Power Time</p>
-                      <img src="assets/gas.jpg" alt="">
+                      <p>Roast Curves &amp; Gas/Power Time <br></p>
+                      <img src="assets/up-down-up.png" alt="">
                     </div>
                   </div>
                 </div>
