--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                 <div class="content-right">
                     <div>
                       <p>Roast Curves &amp; Gas/Power Time <br></p>
-                      <img src="oscillator.png" alt="">
+                      <img src="assets/oscillator.png" alt="">
                     </div>
                   </div>
                 </div>
