--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
             <div class="graph">
               <div>
-                <img src="assets/graph.jpg" alt="">
+                <img src="assets/roasts-curves.png" alt="">
               </div>
               
               <div>
