--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
         <div class="inner">
           <div class="title">
             <p>vi</p>
-            <h2>Team</h2>
+            <h2>TEAM</h2>
           </div>
 
           <div class="content">
