--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="swiper-wrapper">
                   <!-- Add more slides here by copying and pasting 'swiper-slide' div -->
                   <div class="swiper-slide">
-                    <img src="assets/IMG_8576.jpg" alt="">
+                    <img src="assets/abstract1.jpg" alt="">
                   </div>
                   <div class="swiper-slide">
                     <img src="assets/IMG_8859.jpg" alt="">
