--- a/index.html
+++ b/index.html
@@ -91,8 +91,20 @@
                     <img src="assets/abstract1.jpg" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="assets/IMG_8859.jpg" alt="">
+                    <img src="assets/abstract2.jpg" alt="">
                   </div>
+		  <div class="swiper-slide">
+                    <img src="assets/abstract3.jpg" alt="">
+                  </div>
+		  <div class="swiper-slide">
+                    <img src="assets/abstract4.jpg" alt="">
+                  </div>
+		  <div class="swiper-slide">
+                    <img src="assets/abstract5.jpg" alt="">
+                  </div>
+		  <div class="swiper-slide">
+                    <img src="assets/abstract6.jpg" alt="">
+                  </div>	
                 </div>
               </div>
           
