--- a/index.html
+++ b/index.html
@@ -136,11 +136,14 @@
                   <div class="swiper-wrapper">
                     <!-- Add more slides here by copying and pasting 'swiper-slide' div -->
                     <div class="swiper-slide">
-                      <img src="assets/IMG_2376.jpg" alt="">
+                      <img src="assets/bean1.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/IMG_8859.jpg" alt="">
+                      <img src="assets/bean2.jpg" alt="">
                     </div>
+		    <div class="swiper-slide">
+                      <img src="assets/bean3.jpg" alt="">
+                    </div>	  
                   </div>
                 </div>
           
