--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
                 </svg>
               </button>
 
-              <video src="assets/animation.mp4" controls preload playsinline></video>   
+              <video src="assets/oscillations_video.mov" controls preload playsinline></video>   
 	    </div> 
 		  
 	    <!-- Carousel -->
@@ -764,11 +764,14 @@
               <div class="swiper-wrapper">
                <!-- Add more slides here by copying and pasting 'swiper-slide' div -->
                <div class="swiper-slide">
-                <img src="assets/IMG_8576.jpg" alt="">
+                <img src="assets/documentation1.jpg" alt="">
                </div>
                <div class="swiper-slide">
-                <img src="assets/IMG_8859.jpg" alt="">
+                <img src="assets/documentation2.jpg" alt="">
                </div>
+	       <div class="swiper-slide">
+                <img src="assets/documentation3.jpg" alt="">
+               </div>	      
               </div>
              </div>
           
