--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
       <!-- Intro/Table of contents section -->
       <section class="intro">
-        <p>An Experimental Roasting Collaboration with <a class="def-link" href="https://home-coming.com" target="_blank">Homecoming</a>* <a class="def-link" href="https://botz-coffee.com" target="_blank">Botz Coffee</a>† and <a class="def-link" href="https://newinfo.studio" target="_blank">New Information</a>‡</p>
+        <p>An experimental roasting collaboration with <a class="def-link" href="https://home-coming.com" target="_blank">Homecoming</a>* <a class="def-link" href="https://botz-coffee.com" target="_blank">Botz Coffee</a>† and <a class="def-link" href="https://newinfo.studio" target="_blank">New Information</a>‡</p>
       
         <nav id="nav-links">
           <ul>
