--- a/index.html
+++ b/index.html
@@ -34,37 +34,37 @@
             <li>
               <a href="#abstract">
                 <p>i</p>
-                <p>Abstract</p>
+                <p>ABSTRACT</p>
               </a>
             </li>
             <li>
               <a href="#bean">
                 <p>ii</p>
-                <p>Bean</p>
+                <p>BEAN</p>
               </a>
             </li>
             <li>
               <a href="#roasts">
                 <p>iii</p>
-                <p>Roasts</p>
+                <p>ROASTS</p>
               </a>
             </li>
             <li>
               <a href="#loring-s15">
                 <p>iv</p>
-                <p>Loring S15</p>
+                <p>LORING S15</p>
               </a>
             </li>
             <li>
               <a href="#documentation">
                 <p>v</p>
-                <p>Documentation</p>
+                <p>DOCUMENTATION</p>
               </a>
             </li>
             <li>
               <a href="#team">
                 <p>vi</p>
-                <p>Team</p>
+                <p>TEAM</p>
               </a>
             </li>
           </ul>
