--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           
           <div class="content">
-            <p>With a <a href="/" class="def-link">Loring S15</a><sup>iv</sup>, seventy kilograms of exceptional green coffeeii, and zero adherence to any steadfast “rules,” Oscillations was conceived. Guided by taste first, this collaborative endeavor aims to demonstrate unique approaches to roasting coffee on a Loring system. We invite you to enjoy this experiment by exploring the three coffee renditions within this box.</p>
+            <p>With a <a href="/" class="def-link">Loring S15</a><sup>iv</sup>, seventy kilograms of exceptional green coffee</a><sup>ii</sup>, and zero adherence to any steadfast <q>rules,</q> Oscillations was conceived. Guided by taste first, this collaborative endeavor aims to demonstrate unique approaches to roasting coffee on a Loring system. We invite you to enjoy this experiment by exploring the three coffee renditions within this box.</p>
           
             <!-- Carousel -->
             <div class="default-carousel">
