--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
           <div class="content">
             <div class="roast-intro">
-              <p>When tasting coffees roasted on Loring machines utilizing more traditional techniques, we found ourselves questioning the untapped potential of the system, and brainstorming new approaches. Together, we ventured out on a roasting exploration to gain a better understanding of the Loring, to answer lingering questions, and create new ones.</p>
+              <p>When tasting coffees roasted on Loring machines utilizing more conventional techniques, we found ourselves questioning the untapped potential of the system, and brainstorming new approaches. Together, we ventured out on a roasting exploration to gain a better understanding of the Loring, to answer lingering questions, and create new ones.</p>
               <p>Before roasting, we brainstormed different roasting techniques from our own experiences, as well as information available in the roasting community at large. After cupping two blind tables of coffees representing different roasting approaches, we found seven compelling renditions. These renditions represent techniques we believe created distinctly enjoyable variations of the same coffee.</p>
               <p>We hope you experience the unique nuances of three different roasts contained in this Oscillations set. The roast methodologies, their motivations, flavors, and cup characteristics are all provided below.</p>
             </div>
@@ -259,6 +259,7 @@
                 <div class="info-item">
                   <p>1</p>
                   <p>Environmental Temperature</p>
+		  <p>Temperature inside the roaster drum.</p>	
                 </div>
               
                 <div class="info-item">
