--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <div class="info-item">
                   <p>1</p>
                   <p>Environmental Temperature</p>
-		  <p>Temperature inside the roaster drum.</p>	
+		  <br>Temperature inside the roaster drum.</br>	
                 </div>
               
                 <div class="info-item">
