--- a/index.html
+++ b/index.html
@@ -259,8 +259,10 @@
                 <div class="info-item">
                   <p>1</p>
                   <p>Environmental Temperature</p>
-		  <br>Temperature inside the roaster drum.</br>	
                 </div>
+		<div class="info-item">
+                  <p>Temperature inside the roaster drum.</p>
+                </div>      
               
                 <div class="info-item">
                   <p>2</p>
