--- a/index.html
+++ b/index.html
@@ -318,7 +318,12 @@
 		<div class="info-item">
                   <p>Gas X</p>
                   <p>The value or power of the gas setting. (for example gas 20). The highest value of gas on a Loring system is 100. The lowest is 20.</p>
-                </div>   
+                </div>
+
+		<div class="info-item">
+                  <p>Cupping protocols</p>
+                  <p>All coffees were cupped with a 1:17 ratio utilizing Third Wave Water Classic (150 ppm). We recommend using a grinder setting between 400 – 500 microns. Crusts were broken at 4:00 minutes by passing through the bottom of the bowl five times. The same cupper broke all the crusts for continuity purposes. Our team started tasting at 11:00 minutes. </p>
+                </div>       
 		      
               </div>
             </div>
