--- a/index.html
+++ b/index.html
@@ -324,7 +324,6 @@
                   <p>Cupping protocols</p>
                   <p>All coffees were cupped with a 1:17 ratio utilizing Third Wave Water Classic (150 ppm). We recommend using a grinder setting between 400 – 500 microns. Crusts were broken at 4:00 minutes by passing through the bottom of the bowl five times. The same cupper broke all the crusts for continuity purposes. Our team started tasting at 11:00 minutes. </p>
                 </div>       
-		      
               </div>
             </div>
           </div>
@@ -352,39 +351,39 @@
               <div class="dropdown-content">
                 <div class="content-inner">
                   <div class="content-left">
-                    <p>We blasted this 14lb batch. We started with a high charge temp (490&deg;F on the bean probe) and then immediately hit the coffee with full gas. The gas pattern for this coffee was pretty traditional (stepping down on the gas quickly), but at just over 5 minutes, we felt excited to taste how an extremely fast roast would cup on the Loring system. 
+                    <p>We blasted this 14lb batch. We started with a high charge temp (490&deg;F on the bean probe) and then immediately hit the coffee with full gas. The gas pattern for this coffee was pretty traditional (stepping down on the gas quickly), but at just over 5 minutes, we felt excited to taste how an extremely fast roast would cup on the Loring system.  
                     </p>
-                    <p>In his experience, anytime Danny had ever roasted a coffee with such extreme gas on a drum roaster, he mentioned that he always found the cup character to be harsher with carbon tones. With such a fast roast, he was expecting this coffee to have a more carbon-like character with some underdevelopment. 
+                    <p>In his experience, anytime Danny had ever roasted a coffee with such extreme gas on a drum roaster, he mentioned that he always found the cup character to be harsher with carbon tones. With such a fast roast, he was expecting this coffee to have a more carbon-like character with some underdevelopment.  
 		    </p>
 
                     <div>
                       <div class="list-item">
                         <p>First Crack</p>
-                        <p>3:53</p>
+                        <p>04:36</p>
                       </div>
                       <div class="list-item">
                         <p>Duration</p>
-                        <p>x:xx</p>
+                        <p>05:32</p>
                       </div>
                       <div class="list-item">
                         <p>Dev. Time</p>
-                        <p>x:xx</p>
+                        <p>00:56</p>
                       </div>
                       <div class="list-item">
                         <p>Dev. Time Ration</p>
-                        <p>x:xx</p>
+                        <p>16.9&percnt;</p>
                       </div>
                       <div class="list-item">
                         <p>Start Temp</p>
-                        <p>xxx&deg;F</p>
+                        <p>495.5&deg;F</p>
                       </div>                    
                       <div class="list-item">
                         <p>End Temp</p>
-                        <p>xxx&deg;F</p>
+                        <p>408.2&deg;F</p>
                       </div>  
 		    </div>
 
-                    <p>Cupping Notes<br>On the table, the team found this coffee to be absent any &#8220;roasty&#8221; notes or harsher tones. Instead we experienced really delicate and clear tropical fruit notes. In 3-4 weeks, we predict that this roast may open up further to offer more intensity in the cup. </p>
+                    <p>Cupping Notes<br>On the table, the team found this coffee to be absent any <q>roasty</q> notes or harsher tones. Instead we experienced really delicate and clear tropical fruit notes. In 3-4 weeks, we predict that this roast may open up further to offer more intensity in the cup.</p>
                   </div>
 
                   <div class="content-right">
