--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
                 </div>
 
 		<div class="info-item">
-                  <p>Cupping protocols<br>All coffees were cupped with a 1:17 ratio utilizing Third Wave Water Classic (150 ppm). We recommend using a grinder setting between 400 – 500 microns. Crusts were broken at 4:00 minutes by passing through the bottom of the bowl five times. The same cupper broke all the crusts for continuity purposes. Our team started tasting at 11:00 minutes.</p>
+                  <p>Cupping protocols</p>
+		  <p>All coffees were cupped with a 1:17 ratio utilizing Third Wave Water Classic (150 ppm). We recommend using a grinder setting between 400 – 500 microns. Crusts were broken at 4:00 minutes by passing through the bottom of the bowl five times. The same cupper broke all the crusts for continuity purposes. Our team started tasting at 11:00 minutes.</p>
                 </div>       
               </div>
             </div>
