--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           
           <div class="content">
-            <p>With a <a href="/" class="def-link">Loring S15</a><sup>iv</sup>, seventy kilograms of exceptional green coffee<sup>ii</sup>, and zero adherence to any steadfast <q>rules,</q> Oscillations was conceived. Guided by taste first, this collaborative endeavor aims to demonstrate unique approaches to roasting coffee on a Loring system. We invite you to explore the plethora of information we’re sharing here, including specific roast curves and data<sup>iii</sup>, the story behind the beanii we roasted, and background on our team<sup>vi</sup>.
+            <p>With a <a href="/" class="def-link">Loring S15</a><sup>iv</sup>, seventy kilograms of exceptional green coffee<sup>ii</sup>, and zero adherence to any steadfast <q>rules,</q> Oscillations was conceived. Guided by taste first, this collaborative endeavor aims to demonstrate unique approaches to roasting coffee on a Loring system. We invite you to explore the plethora of information we’re sharing here, including specific roast curves and data<sup>iii</sup>, the story behind the bean<sup>ii</sup> we roasted, and background on our team<sup>vi</sup>.
 </p>
           
             <!-- Carousel -->
