--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
           
                 <div class="info-item">
-                  <p>Varietal</p>
+                  <p>Variety</p>
                   <p>Caturra Chiroso</p>
                 </div>
           
