--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                         <p>00:56</p>
                       </div>
                       <div class="list-item">
-                        <p>Dev. Time Ration</p>
+                        <p>Dev. Time Ratio</p>
                         <p>16.9&percnt;</p>
                       </div>
                       <div class="list-item">
@@ -409,9 +409,7 @@
               <div class="dropdown-content">
                 <div class="content-inner">
                   <div class="content-left">
-                    <p>In our experience, Loring systems are much more reactive to changes in gas applications. Without a drum being heated directly by burners, we wondered if we could test a rule that Danny and Devin were generally in agreement with – avoid adding gas back while roasting on drum systems. </p>
-                    <p>Both had seen curves of aesthetically pleasing RoRs (steadily declining with a linear shape) with gas added back later in the roast to mitigate crashes (a sudden vertical drop in the RoR), only to find that the coffees suffered on the cupping table. They had less nuance with a harsher carbon-like character. Would this same concept apply on a Loring?</p>
-		    <p>For this methodology, when we approached first crack, we cut the gas drastically (gas 20) and then added it back quickly at a high setting (gas 70) for a fast finish to the roast.</p>	  
+                    <p>In our experience, Loring systems are much more reactive to changes in gas applications. Without a drum being heated directly by burners, we wondered if we could test a rule that Danny and Devin were generally in agreement with – avoid adding gas back while roasting on drum systems.<br>Both had seen curves of aesthetically pleasing RoRs (steadily declining with a linear shape) with gas added back later in the roast to mitigate crashes (a sudden vertical drop in the RoR), only to find that the coffees suffered on the cupping table. They had less nuance with a harsher carbon-like character. Would this same concept apply on a Loring?<br>For this methodology, when we approached first crack, we cut the gas drastically (gas 20) and then added it back quickly at a high setting (gas 70) for a fast finish to the roast.</p>	  
                     <div>
                       <div class="list-item">
                         <p>First Crack</p>
