--- a/index.html
+++ b/index.html
@@ -463,13 +463,9 @@
               <div class="dropdown-content">
                 <div class="content-inner">
                   <div class="content-left">
-                    <p>To “soak” a coffee is to initially provide the roasting system with minimal gas and energy to allow the green coffee to “soak” up the initial energy in the system. With traditional drum systems, some would argue that this provides the coffee a softer and more nuanced character because it mitigates initially damaging the coffee from too hot of a drum surface.</p>
-                    <p>To our own knowledge, the fixed drum and paddles of a Loring do not get very hot, but we wanted to examine the soaking principle in an extreme scenario to see if there was something more to initially providing less energy to the coffee in a highly convective environment. We decided to “soak” this batch with gas 20 for a drastic 5 minutes before ramping up the gas intensely and stepping it down.</p>
-		    <p>Truth be told, all cuppers found this coffee to be rather memorable on the table. On two blind tables, the coffee was easily recognizable for all cuppers present. It provided the ripest tasting sensations with a lingering and weighty fruit character.</p>
-		    <p><br>Some further observations and roaster thoughts:</p>  
-		    <p>Approximately half of the roast was at gas 20. Since airflow is directly tied to the burner settings in Loring systems, it’s arguable that half of this roast was executed in the lowest possible airflow environment.</p>
-		    <p>After the initial massive “soak,” the RoR for the rest of the roast is rather steadily declining. Some of our cuppers found the steadily-declining RoRs to have some livelier/zestier characteristics on the cupping table.</p> 
-		    <p>The “Supersoaker” methodology, we believe based on our own sensory analysis, deserves some attention. We’re currently testing this methodology on other coffees to see if it provides similar results. </p>  
+                    <p>To <q>soak</q> a coffee is to initially provide the roasting system with minimal gas and energy to allow the green coffee to <q>soak</q> up the initial energy in the system. With traditional drum systems, some would argue that this provides the coffee a softer and more nuanced character because it mitigates initially damaging the coffee from too hot of a drum surface.<br>To our own knowledge, the fixed drum and paddles of a Loring do not get very hot, but we wanted to examine the soaking principle in an extreme scenario to see if there was something more to initially providing less energy to the coffee in a highly convective environment. We decided to <q>soak</q> this batch with gas 20 for a drastic 5 minutes before ramping up the gas intensely and stepping it down.<br>Truth be told, all cuppers found this coffee to be rather memorable on the table. On two blind tables, the coffee was easily recognizable for all cuppers present. It provided the ripest tasting sensations with a lingering and weighty fruit character.</p>
+		    <p>Some further observations and roaster thoughts:</p>  
+		    <p>Approximately half of the roast was at gas 20. Since airflow is directly tied to the burner settings in Loring systems, it’s arguable that half of this roast was executed in the lowest possible airflow environment.<br>After the initial massive <q>soak,</q> the RoR for the rest of the roast is rather steadily declining. Some of our cuppers found the steadily-declining RoRs to have some livelier/zestier characteristics on the cupping table.<br>The <q>Supersoaker</q> methodology, we believe based on our own sensory analysis, deserves some attention. We’re currently testing this methodology on other coffees to see if it provides similar results. </p>  
                     <div>
                       <div class="list-item">
                         <p>First Crack</p>
@@ -523,8 +519,7 @@
               <div class="dropdown-content">
                 <div class="content-inner">
                   <div class="content-left">
-                    <p>Loring’s can roast a coffee extremely fast. Since we blasted a roast with extreme gas in just over five minutes, we wanted to see what would happen with a lengthier roast and a softer gas application.</p>
-		    <p>With a peak gas setting of 40, we were able to stretch this roast to 12 minutes. The RoR sags significantly in the beginning of the roast and flat lines midway through.</p>	  
+                    <p>Loring’s can roast a coffee extremely fast. Since we blasted a roast with extreme gas in just over five minutes, we wanted to see what would happen with a lengthier roast and a softer gas application.<br>With a peak gas setting of 40, we were able to stretch this roast to 12 minutes. The RoR sags significantly in the beginning of the roast and flat lines midway through.</p>	  
             
                     <div>
                       <div class="list-item">
@@ -533,7 +528,7 @@
                       </div>
                       <div class="list-item">
                         <p>Duration</p>
-                        <p>01:15</p>
+                        <p>12:18</p>
                       </div>
 		      <div class="list-item">
                         <p>Dev. Time</p>
