--- a/index.html
+++ b/index.html
@@ -575,8 +575,7 @@
               <div class="dropdown-content">
                 <div class="content-inner">
                   <div class="content-left">
-                    <p>Since Danny and Devin have primarily roasted on drum roasters, we thought it might be eye-opening to see what flavors and cup characteristics we’d find with a traditional drum roasting gas pattern. </p>
-                    <p>We provided ample gas up front while stepping it down steadily before and after first crack. </p>
+                    <p>Since Danny and Devin have primarily roasted on drum roasters, we thought it might be eye-opening to see what flavors and cup characteristics we’d find with a traditional drum roasting gas pattern. <br>We provided ample gas up front while stepping it down steadily before and after first crack. </p>
                     <div>
                       <div class="list-item">
                         <p>First Crack</p>
@@ -687,9 +686,7 @@
             <div class="dropdown-content">
               <div class="content-inner">
                 <div class="content-left">
-                  <p>This methodology could be a roaster operator’s greatest nightmare (haha), but Devin and Danny were up for a challenge. How could we, after all, have a project named Oscillations without oscillating one of the roasts!</p>
-                  <p>The main goal of this roast was to oscillate the gas up and down at a controlled rate, meaning frequent gas changes with precise timing. We started with higher gas oscillation settings and stepped down to lower oscillation settings to taper off energy in the system.</p>
-                  <p>The inspiration behind this methodology was partly inspired by some Loring automation roasts. For some automated Loring roasts, the gas fluctuates rather drastically down and up. We chose to explore a more controlled scenario where we tried to execute a roast with a steadily declining RoR with less drastic fluctuations. Collectively, we were rather pleased with the RoR shape of this roast and were excited to see if it would perform.</p>
+                  <p>This methodology could be a roaster operator’s greatest nightmare (haha), but Devin and Danny were up for a challenge. How could we, after all, have a project named Oscillations without oscillating one of the roasts!<br>The main goal of this roast was to oscillate the gas up and down at a controlled rate, meaning frequent gas changes with precise timing. We started with higher gas oscillation settings and stepped down to lower oscillation settings to taper off energy in the system.<br>The inspiration behind this methodology was partly inspired by some Loring automation roasts. For some automated Loring roasts, the gas fluctuates rather drastically down and up. We chose to explore a more controlled scenario where we tried to execute a roast with a steadily declining RoR with less drastic fluctuations. Collectively, we were rather pleased with the RoR shape of this roast and were excited to see if it would perform.</p>
 		  <div>
                     <div class="list-item">
                         <p>First Crack</p>
