--- a/index.html
+++ b/index.html
@@ -793,7 +793,8 @@
               </button>
 
               <video src="assets/oscillations_video.mov" controls preload playsinline></video>   
-	    </div> 
+	    </div> </div> 
+	 
 		  
 	    <!-- Carousel -->
             <div class="default-carousel">
