--- a/index.html
+++ b/index.html
@@ -794,6 +794,35 @@
 
               <video src="assets/oscillations_video.mov" controls preload playsinline></video>   
 	    </div> 
+
+		  
+ <!-- Carousel -->
+            <div class="default-carousel">
+              <div class="swiper">
+                <div class="swiper-wrapper">
+                  <!-- Add more slides here by copying and pasting 'swiper-slide' div -->
+                  <div class="swiper-slide">
+                    <img src="assets/abstract1.jpg" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="assets/abstract2.jpg" alt="">
+                  </div>
+		  <div class="swiper-slide">
+                    <img src="assets/abstract3.jpg" alt="">
+                  </div>
+		  <div class="swiper-slide">
+                    <img src="assets/abstract4.jpg" alt="">
+                  </div>
+		  <div class="swiper-slide">
+                    <img src="assets/abstract5.jpg" alt="">
+                  </div>
+		  <div class="swiper-slide">
+                    <img src="assets/abstract6.jpg" alt="">
+                  </div>	
+                </div>
+              </div>
+
+
 		  
 	  </div>
         </div>
