--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
           </div>
 
           <div class="content">
-            <p>All the coffees for Oscillations were roasted on a <a href="https://loring.com">Loring S15</a> (15kg). Unlike traditional drum roasters that utilize a combination of conduction and convection to roast, Loring systems are almost exclusively convective. We set out to explore the possibilities and limits of this system as it relates to traditional drum roasters.</p>
+            <p>All the coffees for Oscillations were roasted on a <a class="def-link" href="https://loring.com" target="_blank>Loring S15</a> (15kg). Unlike traditional drum roasters that utilize a combination of conduction and convection to roast, Loring systems are almost exclusively convective. We set out to explore the possibilities and limits of this system as it relates to traditional drum roasters.</p>
           </div>
         </div>
       </section>
