--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                 <p>*</p>
                 <div>
                   <p>Homecoming</p>
-                  <a href="https://home-coming.com">home-coming.com</a>
+                  <a class="def-link" href="https://home-coming.com" target="_blank">home-coming.com</a>
                 </div>
               </div>
               <div>Homecoming is a NYC based cafe/roaster founded with the intention of bringing together their favorite people, ideas, and objects into one space. This pursuit continues, and is fundamental in their approach to coffee sourcing and roasting.</div>
@@ -823,7 +823,7 @@
                 <p>†</p>
                 <div>
                   <p>Botz Coffee</p>
-                  <a href="https://botz-coffee.com">botz-coffee.com</a>
+                  <a class="def-link" href="https://botz-coffee.com" target="_blank">botz-coffee.com</a>
                 </div>
               </div>
               <div>Botz Coffee is the brainchild and one-man (/robot) roasting operation founded by Danny Falloon. The Botz HQ and Tasting Lab are located on the shores of Lake Michigan in the quiet town of Whiting, IN. Unabashedly nostalgic with its descriptions and intensely methodical with its roast practices, with each coffee, Botz tries to tell a story, pique curiosity, and connect with like-minded coffee lovers.</div>
@@ -834,7 +834,7 @@
                 <p>‡</p>
                 <div>
                   <p>New Information</p>
-                  <a href="https://newinfo.studio">newinfo.studio</a>
+                  <a class="def-link" href="https://newinfo.studio" target="_blank">newinfo.studio</a>
                 </div>
               </div>
               <div>A Brooklyn based graphic design studio that creates design ecosystems for culture, commerce, and communities. New Information sees design as an opportunity to imagine and enable connections between people, ideas, and objects in the world.</div>
