--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
 		<div>   
 		<p>§</p>
 	        </div>
-		<div>Devin Eiring brings 15 years of experience in multiple areas of the coffee industry. From 2013 to 2019, he led coffee roasting operations and worked as the head roaster for Verve Coffee Roasters in Santa Cruz, CA. He now works as a green coffee trader for Crop to Cup in Brooklyn.</div>     
+		<p>Devin Eiring brings 15 years of experience in multiple areas of the coffee industry. From 2013 to 2019, he led coffee roasting operations and worked as the head roaster for Verve Coffee Roasters in Santa Cruz, CA. He now works as a green coffee trader for Crop to Cup in Brooklyn.</p>     
 	     </div>
           </div>
 	</div>
