--- a/index.html
+++ b/index.html
@@ -840,12 +840,16 @@
               <div>A Brooklyn based graphic design studio that creates design ecosystems for culture, commerce, and communities. New Information sees design as an opportunity to imagine and enable connections between people, ideas, and objects in the world.</div>
             </div>
 
-	    <div class="team-item">
-                <p>§</p>
-		<div>
-                <p>Devin Eiring brings 15 years of experience in multiple areas of the coffee industry. From 2013 to 2019, he led coffee roasting operations and worked as the head roaster for Verve Coffee Roasters in Santa Cruz, CA. He now works as a green coffee trader for Crop to Cup in Brooklyn.</p>
-	        </div>
-            </div>	  
+	  <div class="team-item">
+	     <div>
+               <p>§</p>
+	          <div>
+		    <p>Devin Eiring</p>
+		   </div>
+	     </div>
+             <div>Devin Eiring brings 15 years of experience in multiple areas of the coffee industry. From 2013 to 2019, he led coffee roasting operations and worked as the head roaster for Verve Coffee Roasters in Santa Cruz, CA. He now works as a green coffee trader for Crop to Cup in Brooklyn.<br><br></div>
+	   </div>
+	  
 
           </div>
 	</div>
