--- a/index.html
+++ b/index.html
@@ -909,22 +909,13 @@
                 <div class="swiper-wrapper">
                   <!-- Add more slides here by copying and pasting 'swiper-slide' div -->
                   <div class="swiper-slide">
-                    <img src="assets/abstract1.jpg" alt="">
+                    <img src="assets/documentation1.jpg" alt="">
                   </div>
                   <div class="swiper-slide">
-                    <img src="assets/abstract2.jpg" alt="">
+                    <img src="assets/documentation2.jpg" alt="">
                   </div>
 		  <div class="swiper-slide">
-                    <img src="assets/abstract3.jpg" alt="">
-                  </div>
-		  <div class="swiper-slide">
-                    <img src="assets/abstract4.jpg" alt="">
-                  </div>
-		  <div class="swiper-slide">
-                    <img src="assets/abstract5.jpg" alt="">
-                  </div>
-		  <div class="swiper-slide">
-                    <img src="assets/abstract6.jpg" alt="">
+                    <img src="assets/documentation3.jpg" alt="">
                   </div>	
                 </div>
               </div>
