--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
             <div class="video-player">
               <button class="overlay">
                 <div class="overlay-image">
-                  <img src="assets/IMG_2376.jpg" alt="">
+                  <img src="assets/video.jpg" alt="">
                 </div>
 
                 <svg x="0px" y="0px" viewBox="0 0 45 60">
