--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <!-- Change title of site here -->
-    <title>Oscillations</title>
+    <title>Oscillations, an experimental roasting collaboration with Homecoming, Botz Coffee, and New Information</title>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
